2009-07-28  Martin Leidig  <mleidig@schlund.de>

	Released Pfixcore 0.12.5

2009-07-27  Martin Leidig  <mleidig@schlund.de>

	Fixed possible deadlock within SessionEndNotificator when
	one thread adds a SessionListener after getting a lock to an 
	application object, while another thread is invalidating 
	the session and calls a registered SessionListener, which itself
	tries to lock the same application object.

2009-06-26  Martin Leidig  <mleidig@schlund.de>

	Fixed "too many open files" problem when using the standard
	JarURLconnection by providing an own implementation.

2009-06-25  Martin Leidig  <mleidig@schlund.de>

	Fixed HTTP caching header problem: adding custom HTTP headers using
	SPDocument.addResponseHeader caused that the "Cache-Control" and
	"Expires" headers weren't set. Now these headers are always set if
	they were not overridden by the application.

2009-05-29  Martin Leidig  <mleidig@schlund.de>

	Released Pfixcore 0.12.4 

2009-05-27  Martin Leidig  <mleidig@schlund.de>

	Added RenderOutputListener support (output creation notification, 
	e.g. can be used for external content analysis). A listener has 
	to implement the according interface and can be configured using 
	a global property:
	<prop name="de.schlund.pfixxml.RenderOutputListener">mypackage.MyListener</prop>

2009-05-18  Martin Leidig  <mleidig@schlund.de>

	Added support for deferring image includes until runtime by setting
	the <pfx:image> or <pfx:xinp type="image"> element's 'level' attribute
	to 'runtime'. The 'src', 'themed-path', 'themed-img' and 'alt' values
	can be lately bound using the according <pfx:src>, <pfx:themed-path>,
	<pfx:themed-img> and <pfx:alt> elements, which are evaluated at
	runtime.

2009-05-13  Martin Leidig  <mleidig@schlund.de>

	Improved XSLT stylesheet compilation error handling: Remember
	TransformerExceptions and add them as TransformerConfigurationException
	cause to reflect the real problem and not just display the pretty vacant 